feat: add service list item docs

--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -27,6 +27,10 @@
           @text="List Item Template"
           @route="components.list-item-template"
         />
+        <S.Link
+          @text="Service List Item"
+          @route="components.service-list-item"
+        />
       </Hds::SideNav::List>
     </:body>
   </Hds::SideNav>
