feat: add figma link to service list item

--- a/documentation/app/templates/components/service-list-item.hbs
+++ b/documentation/app/templates/components/service-list-item.hbs
@@ -1,5 +1,6 @@
 <PageHeader
   @title="Service List Item"
+  @figma="https://www.figma.com/file/SenC8kTQNUJKCvOvcL8WPu/Consul-Component-Library?node-id=642%3A89719&mode=dev"
   @github="https://github.com/hashicorp/consul-ui-toolkit/tree/main/toolkit/src/components/cut/list-item/service"
   @status="development"
 >
