--- a/documentation/app/templates/components/service-list-item.hbs
+++ b/documentation/app/templates/components/service-list-item.hbs
@@ -19,7 +19,7 @@
     <div class="doc-Page">
       <div class="doc-Page-content">
         <h2 id="about">About</h2>
-        <p>The Service list Item is a wrapper around the
+        <p>The Service List Item is a wrapper around the
           <Hds::Link::Inline @route="components.list-item">List Item</Hds::Link::Inline>
           and
           <Hds::Link::Inline @route="components.list-item-template">List Item
