--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -31,6 +31,10 @@
           @text="Service List Item"
           @route="components.service-list-item"
         />
+        <S.Link
+          @text="Service Instance List Item"
+          @route="components.service-instance-list-item"
+        />
       </Hds::SideNav::List>
     </:body>
   </Hds::SideNav>
