--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -181,3 +181,15 @@ li {
     }
   }
 }
+
+.cut-filter-bar {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 100%;
+
+  .cut-filter-bar-filters {
+    gap: 32px;
+    display: flex;
+  }
+}
