--- a/documentation/app/templates/index.hbs
+++ b/documentation/app/templates/index.hbs
@@ -3,6 +3,151 @@
 }}
 
 <PageHeader @title="Overview" />
+<FilterBar>
+  <:searchgroup as |components|>
+    <components.Dropdown as |DD|>
+      <DD.ToggleButton @color="secondary" @text="Across" @count="2" />
+      <DD.Checkbox checked>Metadata</DD.Checkbox>
+      <DD.Checkbox checked>Tags</DD.Checkbox>
+      <DD.Checkbox>Service name</DD.Checkbox>
+    </components.Dropdown>
+  </:searchgroup>
+  <:filtergroup as |components toggle|>
+    <components.Dropdown as |DD|>
+      <DD.ToggleButton @color="secondary" @text="Status" />
+      <DD.Checkbox checked><Hds::Badge
+          @icon="check"
+          @color="success"
+          @text="Health"
+          {{on "click" (fn toggle "status" "success")}}
+        /></DD.Checkbox>
+      <DD.Checkbox><Hds::Badge
+          @icon="alert-triangle"
+          @color="warning"
+          @text="Warning"
+          {{on "click" (fn toggle "status" "warning")}}
+        /></DD.Checkbox>
+      <DD.Checkbox><Hds::Badge
+          @icon="x"
+          @color="critical"
+          @text="Critical"
+          {{on "click" (fn toggle "status" "critical")}}
+        /></DD.Checkbox>
+    </components.Dropdown>
+  </:filtergroup>
+</FilterBar>
+
+{{! <FilterBar as |F|>
+  <F.Checkbox>Text</F.Checkbox>
+  <F.Checkbox>Text</F.Checkbox>
+  <F.Checkbox>Text</F.Checkbox>
+  <F.Checkbox>Text</F.Checkbox> }}
+{{!-- <:filters as |apply S|>
+    <S.Dropdown as |D|>
+      <D.ToggleButton @text="Status" />
+      <D.Checkbox {{on "click" (fn apply "status" "test")}}>test</D.Checkbox>
+      <D.Checkbox
+        checked
+        {{on "click" (fn apply "status" "foo")}}
+      >test</D.Checkbox>
+    </S.Dropdown>
+    <S.Dropdown as |D|>
+      <D.ToggleButton @text="Status" />
+      <D.Checkbox {{on "click" (fn apply "status" "test")}}>test</D.Checkbox>
+      <D.Checkbox
+        checked
+        {{on "click" (fn apply "status" "foo")}}
+      >test</D.Checkbox>
+    </S.Dropdown>
+  </:filters> --}}
+{{! <F.CheckboxFilter @name="status" as |CF|>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+  </F.CheckboxFilter>
+  <F.CheckboxFilter @name="status" as |CF|>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+    <CF.Checkbox checked>
+      <Hds::Badge @icon="check" @color="success" @text="Health" />
+    </CF.Checkbox>
+  </F.CheckboxFilter> }}
+{{! </FilterBar> }}
+{{!-- <List @items={{array "1" "2" "3"}} as |L|>
+  <L.FilterBar />
+</List> --}}
+{{!-- <div class="cut-filter-bar">
+  <div class="cut-filter-bar-filters">
+    <Hds::SegmentedGroup as |S|>
+      <S.TextInput @type="search" placeholder="Search" aria-label="Search" />
+      <S.Dropdown as |DD|>
+        <DD.ToggleButton @color="secondary" @text="Across" @count="2" />
+        <DD.Checkbox checked>Metadata</DD.Checkbox>
+        <DD.Checkbox checked>Tags</DD.Checkbox>
+        <DD.Checkbox>Service name</DD.Checkbox>
+      </S.Dropdown>
+    </Hds::SegmentedGroup>
+
+    <S.Filter @name="type" as |F|>
+      <F.Checkbox @value="content">content</F.Checkbox>
+    </S.Filter>
+
+    {{hash (hds/checckbox {{on click (fn this.bababooey @name @value)}})}}
+    <Hds::SegmentedGroup as |S|>
+      <S.Dropdown as |DD|>
+        <DD.ToggleButton @color="secondary" @text="Status" />
+        <DD.Checkbox checked><Hds::Badge
+            @icon="check"
+            @color="success"
+            @text="Health"
+          /></DD.Checkbox>
+        <DD.Checkbox><Hds::Badge
+            @icon="alert-triangle"
+            @color="warning"
+            @text="Warning"
+          /></DD.Checkbox>
+        <DD.Checkbox checked><Hds::Badge
+            @icon="x"
+            @color="critical"
+            @text="Critical"
+          /></DD.Checkbox>
+      </S.Dropdown>
+      <S.Dropdown as |DD|>
+        <DD.ToggleButton @color="secondary" @text="Type" />
+        <DD.Title @text="Service" />
+        <DD.Checkbox checked>Service</DD.Checkbox>
+        <DD.Title @text="Gateway" />
+        <DD.Checkbox>Api Gateway</DD.Checkbox>
+        <DD.Checkbox>Ingress Gateway</DD.Checkbox>
+        <DD.Checkbox>Mesh Gateway</DD.Checkbox>
+        <DD.Checkbox>Terminating Gateway</DD.Checkbox>
+        <DD.Button @text="Apply" {{on "click" this.handleButtonClick}} />
+      </S.Dropdown>
+    </Hds::SegmentedGroup>
+
+  </div>
+
+  <Hds::Dropdown as |DD|>
+    <DD.ToggleButton
+      @text="sort by: unhealthy to healthy"
+      @icon="sort-desc"
+      @color="secondary"
+    />
+    <DD.Checkmark @selected={{true}}>Unhealthy to Healthy</DD.Checkmark>
+    <DD.Checkmark @selected={{false}}>Unhealthy to Healthy</DD.Checkmark>
+    <DD.Checkmark @selected={{false}}>Unhealthy to Healthy</DD.Checkmark>
+  </Hds::Dropdown>
+</div> --}}
 
 <Hds::Tabs as |T|>
   <T.Tab>About</T.Tab>
