--- a/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
+++ b/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
@@ -5,3 +5,4 @@
 @use '../components/list-item';
 @use '../components/text-with-icon';
 @use '../components/copy-block';
+@use '../components/filter-bar';
