[DRAFT] state, checkbox, checkmarks working

--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -35,6 +35,7 @@
           @text="Service Instance List Item"
           @route="components.service-instance-list-item"
         />
+        <S.Link @text="Filter Bar" @route="components.filter-bar" />
       </Hds::SideNav::List>
     </:body>
   </Hds::SideNav>
