--- a/toolkit/src/components/cut/filter-bar/filter-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter-group.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <Hds::SegmentedGroup
   class='cut-filter-bar-filter-group'
   ...attributes
@@ -12,6 +16,7 @@
         softToggle=@softToggle
         applyFilter=@applyFilter
         isChecked=@isChecked
+        config=@config
       )
     )
   }}
