--- a/toolkit/src/styles/components/filter-bar.scss
+++ b/toolkit/src/styles/components/filter-bar.scss
@@ -1,3 +1,7 @@
+/**
+ * Copyright (c) HashiCorp, Inc.
+ */
+
 .cut-filter-bar {
   display: flex;
   flex-wrap: nowrap;
@@ -5,7 +9,7 @@
   width: 100%;
 
   .cut-filter-bar-filters {
-    gap: 32px;
+    gap: 1rem;
     display: flex;
   }
 }
