Update filter shapes and update functions

--- a/toolkit/src/components/cut/filter-bar/filter/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/index.hbs
@@ -18,7 +18,7 @@
             'cut/filter-bar/filter/checkbox'
             checkbox=DD.Checkbox
             filters=@filters
-            name=@name
+            filterName=@name
             toggle=@toggle
             softToggle=@softToggle
             applyFilter=@applyFilter
@@ -29,7 +29,7 @@
             'cut/filter-bar/filter/checkmark'
             checkmark=DD.Checkmark
             filters=@filters
-            name=@name
+            filterName=@name
             toggle=@toggle
             softToggle=@softToggle
             applyFilter=@applyFilter
@@ -64,7 +64,7 @@
           'cut/filter-bar/filter/checkbox'
           checkbox=DD.Checkbox
           filters=@filters
-          name=@name
+          filterName=@name
           toggle=@toggle
           softToggle=@softToggle
           applyFilter=@applyFilter
@@ -74,7 +74,7 @@
           'cut/filter-bar/filter/checkmark'
           checkmark=DD.Checkmark
           filters=@filters
-          name=@name
+          filterName=@name
           toggle=@toggle
           softToggle=@softToggle
           applyFilter=@applyFilter
