--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -23,8 +23,8 @@
 >
   <FB.PreFilter @name="cluster" as |F|>
     <F.ToggleButton @icon="server-cluster" @text="cluster" @color="secondary" />
-    <F.Checkmark @value={{1}}>One</F.Checkmark>
-    <F.Checkmark @value={{2}}>Two</F.Checkmark>
+    <F.Checkmark @value={{1}} @name="Cluster One">One</F.Checkmark>
+    <F.Checkmark @value={{2}} @name="Cluster Two">Two</F.Checkmark>
   </FB.PreFilter>
   <FB.FilterGroup as |Filters|>
     <Filters.Filter
@@ -34,24 +34,24 @@
       as |F|
     >
       <F.ToggleButton @color="secondary" @text="Status" />
-      <F.Checkbox @value="running"><Hds::Badge
+      <F.Checkbox @value="running" @name="Running"><Hds::Badge
           @text="running"
           @color="success"
         /></F.Checkbox>
-      <F.Checkbox @value="warning"><Hds::Badge
+      <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
           @text="warning"
           @color="warning"
         /></F.Checkbox>
-      <F.Checkbox @value="critical"><Hds::Badge
+      <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
           @text="critical"
           @color="critical"
         /></F.Checkbox>
     </Filters.Filter>
     <Filters.Filter @name="type" as |F|>
       <F.ToggleButton @color="secondary" @text="Type" />
-      <F.Checkmark @value="consul">Consul</F.Checkmark>
-      <F.Checkmark @value="nomad">Nomad</F.Checkmark>
-      <F.Checkmark @value="vault">Vault</F.Checkmark>
+      <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
+      <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
+      <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
     </Filters.Filter>
   </FB.FilterGroup>
 </Cut::FilterBar>
