--- a/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
@@ -5,7 +5,7 @@
 {{#let @checkmark as |Checkmark|}}
   <Checkmark
     @selected={{this.isChecked}}
-    {{on 'click' (fn @softToggle @name 'Type' @value false)}}
+    {{on 'click' (fn @softToggle @filterName @name @value false)}}
     ...attributes
   >{{yield}}</Checkmark>
 {{/let}}
