--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -100,6 +100,16 @@
       {{/each}}
     {{/each}}
 
+    {{#if (gt this.appliedFilters.length 0)}}
+      <Hds::Button
+        @text='Clear filters'
+        @color='tertiary'
+        @icon='x'
+        @type='button'
+        {{on 'click' this.clearFilters}}
+      />
+    {{/if}}
+
     {{!-- <p class='cut-filter-bar-applied-filter-label'><strong>Status:</strong></p>
     <Hds::Tag @text='Running' @onDismiss={{fn this.applyFilter 'status'}} />
     <Hds::Tag @text='Running' @onDismiss={{fn this.applyFilter 'status'}} />
